--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     <header class="main-header" id="inicio">
         <div class="container hero-content">
             <div class="header-logo">
+                <!-- LOGO IMAGE ADDED BELOW -->
                 <img src="Logo for myleads.ai.jpg" alt="Myleads.ai Logo">
                 <h1 class="main-title">Cómo Transformar tu Conocimiento en un Negocio de 6 y 7 Cifras</h1>
             </div>
