--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Servicios Myleads.ai</title>
+  <title>Myleads.ai - Servicios</title>
   <style>
     body {
       margin: 0;
@@ -40,7 +40,7 @@
       }
     }
 
-    .card {
+    .service-card {
       background-color: rgba(0, 0, 0, 0.75);
       color: #f0f0f0;
       padding: 20px;
@@ -52,15 +52,18 @@
       transition: transform 0.3s ease;
     }
 
-    .card:hover {
+    .service-card:hover {
       transform: translateY(-5px);
+    }
+
+    .icono-check {
+      margin-bottom: 1rem;
     }
 
     .icono-check svg {
       width: 36px;
       height: 36px;
       stroke: #5d3fd3;
-      margin-bottom: 12px;
     }
 
     h3 {
@@ -70,7 +73,7 @@
 </head>
 <body>
 
-  <div class="card">
+  <div class="service-card">
     <div class="icono-check">
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" />
@@ -80,7 +83,7 @@
     <p>Revisión de estrategias personalizadas y resolución de dudas en sesiones en vivo con los fundadores.</p>
   </div>
 
-  <div class="card">
+  <div class="service-card">
     <div class="icono-check">
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" />
@@ -90,7 +93,7 @@
     <p>Evaluamos mejoras, optimizamos procesos y te ayudamos a implementar estrategias para optimizar resultados.</p>
   </div>
 
-  <div class="card">
+  <div class="service-card">
     <div class="icono-check">
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" />
@@ -100,7 +103,7 @@
     <p>Revisión estratégica a los 45 días para analizar los resultados y ajustar tu plan de crecimiento.</p>
   </div>
 
-  <div class="card">
+  <div class="service-card">
     <div class="icono-check">
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" />
@@ -110,7 +113,7 @@
     <p>Puedes chatear directo a través de chat privado con nuestros consultores expertos en cada área de tu negocio.</p>
   </div>
 
-  <div class="card">
+  <div class="service-card">
     <div class="icono-check">
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" />
@@ -120,7 +123,7 @@
     <p>Marketing, ventas, finanzas, operaciones, estrategia, desarrollo personal y más.</p>
   </div>
 
-  <div class="card">
+  <div class="service-card">
     <div class="icono-check">
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" />
