--- a/index.html
+++ b/index.html
@@ -22,7 +22,20 @@
             font-family: var(--font-family);
             line-height: 1.6;
             color: var(--text-color);
-            background: linear-gradient(135deg, #5d3fd3 0%, #121212 100%);
+            /* --- MODIFICADO: De gradiente a color sólido para el fondo dinámico --- */
+            background-color: var(--background-color);
+        }
+        /* --- AÑADIDO: Estilos para el contenedor del fondo de partículas --- */
+        #particles-js {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            z-index: -1; /* Clave para ponerlo detrás del contenido */
+        }
+        main, header, footer {
+            position: relative; /* Asegura que el contenido principal esté por encima del fondo */
         }
         .container { max-width: 1100px; margin: 0 auto; padding: 0 2rem; }
         .bg-dark { background-color: var(--secondary-color); }
@@ -40,7 +53,7 @@
         section { padding: 6rem 0; }
         .text-center { text-align: center; }
         .mt-4 { margin-top: 1.5rem; }
-        .main-header { background-color: #121212; padding: 10rem 0 6rem; text-align: center; }
+        .main-header { background-color: transparent; padding: 10rem 0 6rem; text-align: center; }
         .header-logo { margin-bottom: 2rem; }
         .header-logo img { max-width: 250px; }
         .main-title { font-size: 3.5rem; line-height: 1.1; margin-top: 1rem; margin-bottom: 1rem; }
@@ -52,7 +65,7 @@
         .services-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem; margin-top: 3rem; }
         .service-card { background-color: #2b2b2b; padding: 2rem; border-radius: 10px; text-align: center; transition: transform 0.3s ease, box-shadow 0.3s ease; border: 1px solid var(--primary-color); }
         .service-card:hover { transform: translateY(-10px); box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4); }
-        .service-card img { margin-bottom: 1.5rem; }
+        .service-card svg { margin-bottom: 1.5rem; }
         .service-card h4 { font-size: 1.4rem; margin-bottom: 1rem; color: var(--primary-color); }
         .socios-grid { display: grid; grid-template-columns: 1fr; gap: 3rem; text-align: center; }
         .socio-card { padding: 2rem; }
@@ -82,10 +95,11 @@
     </style>
 </head>
 <body>
+    <div id="particles-js"></div>
+
     <header class="main-header" id="inicio">
         <div class="container hero-content">
             <div class="header-logo">
-                <!-- LOGO IMAGE ADDED BELOW -->
                 <img src="Logo for myleads.ai.jpg" alt="Myleads.ai Logo">
                 <h1 class="main-title">Cómo Transformar tu Conocimiento en un Negocio de 6 y 7 Cifras</h1>
             </div>
@@ -121,32 +135,32 @@
                 <h2 class="section-title">El Método "Conocimiento Exitoso"</h2>
                 <div class="services-grid">
                     <div class="service-card">
-                        <img src="https://via.placeholder.com/60/5d3fd3/ffffff?text=✔" alt="Icono de check">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="color: var(--primary-color);"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg>
                         <h4>Consultorías Grupales en Vivo Semanal con Franco y Tomás</h4>
                         <p>Recibes estrategias personalizadas y resuelves todas tus consultas en reuniones semanales en vivo con los fundadores.</p>
                     </div>
                     <div class="service-card">
-                        <img src="https://via.placeholder.com/60/5d3fd3/ffffff?text=✔" alt="Icono de check">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="color: var(--primary-color);"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg>
                         <h4>Auditoría Personalizada de tu Negocio</h4>
                         <p>Evaluamos mejoras, ajustamos procesos y definimos estrategias para optimizar resultados.</p>
                     </div>
                     <div class="service-card">
-                        <img src="https://via.placeholder.com/60/5d3fd3/ffffff?text=✔" alt="Icono de check">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="color: var(--primary-color);"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg>
                         <h4>Reunión de Revisión del Estado de tu Negocio</h4>
                         <p>Revisión estratégica a los 45 días para analizar resultados y ajustar tu plan de crecimiento.</p>
                     </div>
                     <div class="service-card">
-                        <img src="https://via.placeholder.com/60/5d3fd3/ffffff?text=✔" alt="Icono de check">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="color: var(--primary-color);"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg>
                         <h4>Soporte 1 a 1 con nuestros Consultores por Chat Privado</h4>
                         <p>Soporte directo a través de chat privado, donde recibirás feedback y soluciones prácticas de expertos en cada área.</p>
                     </div>
                     <div class="service-card">
-                        <img src="https://via.placeholder.com/60/5d3fd3/ffffff?text=✔" alt="Icono de check">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="color: var(--primary-color);"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg>
                         <h4>+20hs de Reuniones Semanales con Expertos de diversas áreas</h4>
                         <p>Enfocadas en estrategias avanzadas de anuncios, prospección, ventas, entrega de servicio y operaciones.</p>
                     </div>
                     <div class="service-card">
-                        <img src="https://via.placeholder.com/60/5d3fd3/ffffff?text=✔" alt="Icono de check">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="color: var(--primary-color);"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg>
                         <h4>Acceso a Eventos Anuales con los Fundadores y el Equipo</h4>
                         <p>Asiste a eventos exclusivos para ampliar tu red, acceder a conocimientos de alto nivel y conectar con líderes del sector.</p>
                     </div>
@@ -225,7 +239,6 @@
                 <a href="https://calendly.com/myleads-ia/30min" class="btn btn-primary btn-lg">Comienza tu Transformación Ahora</a>
             </div>
         </section>
-        <!-- FAQ Section with interactivity -->
         <section class="faq-section" id="faq">
             <div class="container">
                 <h2 class="section-title">Preguntas Frecuentes</h2>
@@ -258,16 +271,15 @@
             </div>
         </div>
     </footer>
+
     <script>
     document.addEventListener("DOMContentLoaded", () => {
-      // FAQ accordion functionality
       document.querySelectorAll(".faq-question").forEach(q => {
         q.addEventListener("click", function() {
           const answer = this.nextElementSibling;
           answer.style.display = answer.style.display === "block" ? "none" : "block";
         });
       });
-      // Smooth scroll for anchor links
       document.querySelectorAll('a[href^="#"]').forEach(anchor => {
         anchor.addEventListener("click", function (e) {
           const targetId = this.getAttribute("href");
@@ -277,6 +289,27 @@
           }
         });
       });
+    });
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+    <script>
+    particlesJS('particles-js', {
+      "particles": {
+        "number": { "value": 80, "density": { "enable": true, "value_area": 800 } },
+        "color": { "value": "#ffffff" },
+        "shape": { "type": "circle" },
+        "opacity": { "value": 0.5, "random": true, "anim": { "enable": true, "speed": 1, "opacity_min": 0.1, "sync": false } },
+        "size": { "value": 3, "random": true },
+        "line_linked": { "enable": true, "distance": 150, "color": "#5d3fd3", "opacity": 0.4, "width": 1 },
+        "move": { "enable": true, "speed": 2, "direction": "none", "random": true, "straight": false, "out_mode": "out", "bounce": false }
+      },
+      "interactivity": {
+        "detect_on": "canvas",
+        "events": { "onhover": { "enable": true, "mode": "grab" }, "onclick": { "enable": true, "mode": "push" }, "resize": true },
+        "modes": { "grab": { "distance": 140, "line_opacity": 1 }, "push": { "particles_nb": 4 } }
+      },
+      "retina_detect": true
     });
     </script>
 </body>
