--- a/index.html
+++ b/index.html
@@ -99,4 +99,197 @@
                 <img src="Logo for myleads.ai.jpg" alt="Myleads.ai Logo">
                 <h1 class="main-title">Cómo Transformar tu Conocimiento en un Negocio de 6 y 7 Cifras</h1>
             </div>
-            <p class="subtitle">Desc
+            <p class="subtitle">Descubre el método probado para empaquetar tu conocimiento único, atraer a la audiencia perfecta y construir un negocio online que te dé libertad y propósito.</p>
+            <div class="cta-buttons">
+                <a href="#programa" class="btn btn-primary">Descubre el Programa</a>
+                <a href="https://calendly.com/myleads-ia/30min" class="btn btn-secondary">Agenda una Llamada</a>
+            </div>
+        </div>
+    </header>
+    <main>
+        <section class="problem-section" id="problema">
+            <div class="container">
+                <h2 class="section-title">El Problema: ¿Te sientes estancado?</h2>
+                <div class="problem-grid">
+                    <div class="problem-card">
+                        <h3>Falta de Claridad</h3>
+                        <p>Tienes mucho conocimiento, pero no sabes cómo estructurarlo en una oferta atractiva que la gente esté dispuesta a pagar.</p>
+                    </div>
+                    <div class="problem-card">
+                        <h3>Ingresos Inconsistentes</h3>
+                        <p>Dependes de clientes individuales y no tienes un sistema escalable para generar ingresos de forma regular y predecible.</p>
+                    </div>
+                    <div class="problem-card">
+                        <h3>Miedo a las Redes</h3>
+                        <p>Sabes que necesitas estar online, pero no tienes una estrategia efectiva para convertir seguidores en clientes de pago.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="services-section bg-dark" id="servicios">
+            <div class="container">
+                <h2 class="section-title">El Método "Conocimiento Exitoso"</h2>
+                <div class="services-grid">
+                    <div class="service-card">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="color: var(--primary-color);"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg>
+                        <h4>Consultorías Grupales en Vivo Semanal con Franco y Tomás</h4>
+                        <p>Recibes estrategias personalizadas y resuelves todas tus consultas en reuniones semanales en vivo con los fundadores.</p>
+                    </div>
+                    <div class="service-card">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="color: var(--primary-color);"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg>
+                        <h4>Auditoría Personalizada de tu Negocio</h4>
+                        <p>Evaluamos mejoras, ajustamos procesos y definimos estrategias para optimizar resultados.</p>
+                    </div>
+                    <div class="service-card">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="color: var(--primary-color);"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg>
+                        <h4>Reunión de Revisión del Estado de tu Negocio</h4>
+                        <p>Revisión estratégica a los 45 días para analizar resultados y ajustar tu plan de crecimiento.</p>
+                    </div>
+                    <div class="service-card">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="color: var(--primary-color);"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg>
+                        <h4>Soporte 1 a 1 con nuestros Consultores por Chat Privado</h4>
+                        <p>Soporte directo a través de chat privado, donde recibirás feedback y soluciones prácticas de expertos en cada área.</p>
+                    </div>
+                    <div class="service-card">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="color: var(--primary-color);"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg>
+                        <h4>+20hs de Reuniones Semanales con Expertos de diversas áreas</h4>
+                        <p>Enfocadas en estrategias avanzadas de anuncios, prospección, ventas, entrega de servicio y operaciones.</p>
+                    </div>
+                    <div class="service-card">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="color: var(--primary-color);"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg>
+                        <h4>Acceso a Eventos Anuales con los Fundadores y el Equipo</h4>
+                        <p>Asiste a eventos exclusivos para ampliar tu red, acceder a conocimientos de alto nivel y conectar con líderes del sector.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="program-section" id="programa">
+            <div class="container text-center">
+                <h2 class="section-title">Embudos, Automatizaciones y Más</h2>
+                <p class="subtitle">
+                    En Myleads.ai, no solo te damos un método, sino que te ayudamos a construir la maquinaria para que tu negocio funcione en piloto automático. Te enseñaremos a crear <strong>embudos de ventas</strong> que capturen leads, a implementar <strong>automatizaciones</strong> que nutran a tus prospectos y a diseñar <strong>CTAs</strong> irresistibles.
+                </p>
+                <div class="services-grid">
+                    <div class="service-card">
+                        <h4>Embudos de Venta Optimizados</h4>
+                        <p>Construye un camino claro para que tus seguidores se conviertan en clientes de pago, desde el primer contacto hasta la venta.</p>
+                    </div>
+                    <div class="service-card">
+                        <h4>Automatización Inteligente</h4>
+                        <p>Aprende a usar herramientas para que tus procesos de marketing y ventas trabajen por ti 24/7, liberando tu tiempo.</p>
+                    </div>
+                    <div class="service-card">
+                        <h4>Lead Magnets que Capturan</h4>
+                        <p>Crea activos digitales de valor que atraigan a tu audiencia ideal y la motiven a dejarte su información de contacto.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="socios-section bg-dark" id="socios">
+            <div class="container">
+                <h2 class="section-title">Conoce a los Socios: Franco y Tomás</h2>
+                <div class="socios-grid">
+                    <div class="socio-card">
+                        <img src="[URL_DE_LA_FOTO_DE_FRANCO]" alt="Foto de Franco Scaglione" class="socio-foto">
+                        <h3>Franco Scaglione</h3>
+                        <h4>Licenciado en Negocios Digitales y Estratega de Crecimiento</h4>
+                        <p>Como CEO de Myleads.ai, Franco es un experto en la creación de contenido de alto impacto y en el diseño de estrategias para escalar negocios de manera exponencial. Su experiencia en el manejo de comunidades de más de 30 mil miembros activos demuestra su habilidad para entender a la audiencia y construir marcas que generan autoridad.</p>
+                    </div>
+                    <div class="socio-card">
+                        <img src="[URL_DE_LA_FOTO_DE_TOMÁS]" alt="Foto de Tomás Heredia" class="socio-foto">
+                        <h3>Tomás Heredia</h3>
+                        <h4>Experto en Marketing Digital y Automatizaciones</h4>
+                        <p>Tomás es el especialista en marketing digital encargado de transformar prospectos en clientes. Con un profundo conocimiento en el diseño de embudos de venta y en herramientas de automatización, se enfoca en crear sistemas que trabajen por ti 24/7 para generar leads de alta calidad y maximizar tus conversiones de forma constante.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="asesoria-section" id="asesoria">
+            <div class="container text-center">
+                <h2 class="section-title">¿Tienes preguntas o quieres un plan a medida?</h2>
+                <p class="subtitle">Agenda una asesoría gratuita de 15 minutos para que hablemos sobre tus objetivos y cómo podemos ayudarte a construir un negocio rentable y sostenible.</p>
+                <a href="https://calendly.com/myleads-ia/30min" class="btn btn-primary btn-lg">Agenda tu Sesión de 15 Minutos</a>
+            </div>
+        </section>
+        <section class="final-cta-section bg-dark" id="contacto">
+            <div class="container">
+                <h2 class="section-title">Es Hora de Compartir tu Genio con el Mundo y Ser Recompensado por Ello</h2>
+                <a href="https://calendly.com/myleads-ia/30min" class="btn btn-primary btn-lg">Comienza tu Transformación Ahora</a>
+            </div>
+        </section>
+        <section class="faq-section" id="faq">
+            <div class="container">
+                <h2 class="section-title">Preguntas Frecuentes</h2>
+                <div class="faq-item">
+                    <div class="faq-question">¿Cómo funciona el programa?</div>
+                    <div class="faq-answer">El programa incluye consultorías grupales, auditorías personalizadas, soporte por chat y acceso a eventos exclusivos.</div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-question">¿Quiénes pueden participar?</div>
+                    <div class="faq-answer">Cualquier emprendedor, coach, consultor o profesional que quiera escalar su negocio con su conocimiento.</div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-question">¿Hay garantía de resultados?</div>
+                    <div class="faq-answer">Aplicamos estrategias probadas, pero el éxito depende de la acción y compromiso de cada participante.</div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="main-footer">
+        <div class="container">
+            <p>
+                &copy; 2023 
+                <a href="https://myleadsai.github.io/website/" target="_blank" style="color: #5d3fd3; text-decoration: underline;">
+                    myleadsai.github.io/website
+                </a>. Todos los derechos reservados.
+            </p>
+            <div class="footer-links">
+                <a href="#">Política de Privacidad</a>
+                <a href="#">Términos y Condiciones</a>
+            </div>
+        </div>
+    </footer>
+
+    <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      document.querySelectorAll(".faq-question").forEach(q => {
+        q.addEventListener("click", function() {
+          const answer = this.nextElementSibling;
+          answer.style.display = answer.style.display === "block" ? "none" : "block";
+        });
+      });
+      document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+        anchor.addEventListener("click", function (e) {
+          const targetId = this.getAttribute("href");
+          if (document.querySelector(targetId)) {
+            e.preventDefault();
+            document.querySelector(targetId).scrollIntoView({ behavior: "smooth" });
+          }
+        });
+      });
+    });
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+    <script>
+    particlesJS('particles-js', {
+      "particles": {
+        "number": { "value": 80, "density": { "enable": true, "value_area": 800 } },
+        "color": { "value": "#ffffff" },
+        "shape": { "type": "circle" },
+        "opacity": { "value": 0.5, "random": true, "anim": { "enable": true, "speed": 1, "opacity_min": 0.1, "sync": false } },
+        "size": { "value": 3, "random": true },
+        "line_linked": { "enable": true, "distance": 150, "color": "#5d3fd3", "opacity": 0.4, "width": 1 },
+        "move": { "enable": true, "speed": 2, "direction": "none", "random": true, "straight": false, "out_mode": "out", "bounce": false }
+      },
+      "interactivity": {
+        "detect_on": "canvas",
+        "events": { "onhover": { "enable": true, "mode": "grab" }, "onclick": { "enable": true, "mode": "push" }, "resize": true },
+        "modes": { "grab": { "distance": 140, "line_opacity": 1 }, "push": { "particles_nb": 4 } }
+      },
+      "retina_detect": true
+    });
+    </script>
+</body>
+</html>
