--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             font-family: var(--font-family);
             line-height: 1.6;
             color: var(--text-color);
-            background-color: var(--background-color);
+            background-color: rgba(18, 18, 18, 0.9); /* CAMBIO: Fondo translúcido */
         }
         #particles-js {
             position: fixed;
@@ -36,7 +36,7 @@
             position: relative; 
         }
         .container { max-width: 1100px; margin: 0 auto; padding: 0 2rem; }
-        .bg-dark { background-color: var(--secondary-color); }
+        .bg-dark { background-color: rgba(43, 43, 43, 0.9); } /* CAMBIO: Fondo oscuro translúcido */
         .btn {
             display: inline-block; padding: 1rem 2rem; border-radius: 5px;
             text-decoration: none; font-weight: 600; transition: all 0.3s ease;
